--- a/settings-ali.json
+++ b/settings-ali.json
@@ -145,36 +145,6 @@
       ]
     },
     {
-      "name": "🔑 爱盼小站",
-      "index": 4,
-      "val": "https://bbs.unilei.cn",
-      "key": "unilei",
-      "desc": "阿里云盘资源分享站，网盘资源资源分享与互助的社区",
-      "needKey": true,
-      "username": "",
-      "password": "",
-      "cookie": "",
-      "loginError": false,
-      "searchUrl": "https://bbs.unilei.cn/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CrecipientUsers%2CrecipientGroups%2CfirstPost&filter%5Bq%5D=**&sort=fysort&page%5Boffset%5D=fypage",
-      "cats": [
-        { "name": "电影", "val": "movie", "withType": 1 },
-        { "name": "剧集", "val": "tv", "withType": 1 },
-        { "name": "资源合集", "val": "ziyuanheji", "withType": 1 },
-        { "name": "动漫", "val": "dongman", "withType": 1 },
-        { "name": "图片", "val": "picture", "withType": 1 },
-        { "name": "音乐", "val": "music", "withType": 1 }
-      ],
-      "sorts": [
-        { "name": "相关推荐", "val": "", "withType": -1},
-        { "name": "最新回复", "val": "-lastPostedAt" },
-        { "name": "热门主题", "val": "-commentCount" },
-        { "name": "新鲜出炉", "val": "-createdAt" },
-        { "name": "陈年旧帖", "val": "createdAt" },
-        { "name": "最多人看", "val": "-view_count" },
-        { "name": "最少人看", "val": "view_count" }
-      ]
-    },
-    {
       "name": "🔑 鼎天网络社区",
       "index": 5,
       "val": "https://community.dtnetwork.top/",
@@ -259,7 +229,7 @@
       "desc": "已收录2000w+优质资源，拥有全网90%以上的阿里云盘资源",
       "dataType": "html",
       "detailLinkPre": "https://www.alipanso.com/",
-      "itemsExcloudByLink": "#|https",
+      "itemsExcloudByLink": "#|https?",
       "homeDataPath": "body&&.resource-item;h1&&Text;a&&href;.resource-meta&&Text+.resource-meta,1&&.meta-item&&Text;",
       "searchUrl": "https://www.alipanso.com/search.html?page=fypage&keyword=**&search_folder_or_file=fyclass&is_search_folder_content=1&is_search_path_title=1&category=all&file_extension=all&search_model=fysort",
       "searchDataPath": "body&&.resource-item;h1&&Text;a&&href;.resource-meta&&Text+.resource-meta,1&&.meta-item&&Text;",
