--- a/settings-ali.json
+++ b/settings-ali.json
@@ -3,7 +3,7 @@
     {
       "name": "🔑 阿里小站",
       "index": 0,
-      "val": "https://newxiaozhan.com",
+      "val": "https://www.pan666.cn",
       "key": "xiaozhan",
       "desc": "阿里云盘资源共享站",
       "needKey": true,
@@ -11,7 +11,7 @@
       "password": "",
       "cookie": "",
       "loginError": false,
-      "searchUrl": "https://newxiaozhan.com/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
+      "searchUrl": "https://www.pan666.cn/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
       "cats": [
         { "name": "影视", "val": "video", "withType": 1},
         { "name": "动漫", "val": "comic", "withType": 1 },
