--- a/settings-ali.json
+++ b/settings-ali.json
@@ -1,22 +1,49 @@
 
 [
+  {
+    "name": "🔑 阿里小站",
+    "index": 0,
+    "val": "https://www.pan666.cn",
+    "key": "xiaozhan",
+    "desc": "阿里云盘资源共享站",
+    "needKey": true,
+    "username": "",
+    "password": "",
+    "cookie": "",
+    "loginError": false,
+    "searchUrl": "https://www.pan666.cn/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
+    "cats": [
+      { "name": "影视", "val": "video", "withType": 1},
+      { "name": "动漫", "val": "comic", "withType": 1 },
+      { "name": "图片", "val": "picture", "withType": 1 },
+      { "name": "音乐", "val": "music", "withType": 1 }
+    ],
+    "sorts": [
+      { "name": "相关推荐", "val": "", "withType": -1},
+      { "name": "最新回复", "val": "-lastPostedAt"},
+      { "name": "热门主题", "val": "-commentCount"},
+      { "name": "新鲜出炉", "val": "-createdAt"},
+      { "name": "陈年旧帖", "val": "createdAt"}
+    ]
+  },
     {
-      "name": "🔑 阿里小站",
-      "index": 0,
-      "val": "https://www.pan666.cn",
-      "key": "xiaozhan",
-      "desc": "阿里云盘资源共享站",
-      "needKey": true,
+      "name": "🔥 云盘资源分享",
+      "index": 1,
+      "val": "https://yunpan1.com",
+      "key": "yunpan1",
+      "desc": "提供阿里云盘资源、影视资源、学习资源、软件资源、动漫资源、游戏资源等分享。",
+      "needKey": false,
       "username": "",
       "password": "",
       "cookie": "",
       "loginError": false,
-      "searchUrl": "https://www.pan666.cn/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
+      "searchUrl": "https://yunpan1.com/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
       "cats": [
-        { "name": "影视", "val": "video", "withType": 1},
-        { "name": "动漫", "val": "comic", "withType": 1 },
-        { "name": "图片", "val": "picture", "withType": 1 },
-        { "name": "音乐", "val": "music", "withType": 1 }
+        { "name": "影视", "val": "video1", "withType": 1},
+        { "name": "动漫", "val": "cartoon", "withType": 1 },
+        { "name": "图片", "val": "img", "withType": 1 },
+        { "name": "音乐", "val": "music", "withType": 1 },
+        { "name": "书籍", "val": "book", "withType": 1 }
       ],
       "sorts": [
         { "name": "相关推荐", "val": "", "withType": -1},
@@ -28,7 +55,7 @@
     },
     {
       "name": "🔥 阿里大站",
-      "index": 1,
+      "index": 2,
       "val": "https://pan.3636360.com/api/v3/thread.list?perPage=10&page=fypage&fyclass&fysort",
       "key": "dazhan",
       "desc": "阿里大站,阿里云盘资源共享站",
@@ -53,7 +80,7 @@
     },
     {
       "name": "🔑 阿里云盘小站",
-      "index": 3,
+      "index": 4,
       "val": "https://wpxz.org",
       "key": "yunshare",
       "desc": "云资源共享第一站,你想要的这里都有!",
@@ -151,7 +178,7 @@
     },
     {
       "name": "🔑 爱盼小站",
-      "index": 4,
+      "index": 5,
       "val": "https://aipanxiaozhan.com",
       "key": "unilei",
       "desc": "阿里云盘资源分享站，网盘资源资源分享与互助的社区",
@@ -182,7 +209,7 @@
     },
     {
       "name": "🔑 鼎天网络社区",
-      "index": 5,
+      "index": 6,
       "val": "https://community.dtnetwork.top/",
       "key": "dtnetwork",
       "desc": "阿里云盘资源分享站，网盘资源资源分享与互助的社区",
@@ -210,7 +237,7 @@
     },
     {
         "name": "🔥 云盘资源网",
-        "index": 2,
+        "index": 3,
         "val": "https://www.yunpanziyuan.com/forum-1-fypage.htm?tagids=fyarea_fyclass_fyyear_",
         "key": "yunpanziyuan",
         "desc": "云盘资源网是完全免费的云盘资源分享平台！",
@@ -259,7 +286,7 @@
     },
     {
       "name": "🔍 UP云搜",
-      "index": 6,
+      "index": 10,
       "val": "https://www.upyunso.com/search.html?page=fypage&keyword=%E6%9C%80%E6%96%B0",
       "key": "upsou",
       "desc": "UP云搜,最早提供阿里云盘搜索服务的平台,收集各类阿里云盘资源提供一站式搜索功能,推动互联网优质资源的高效传递!",
@@ -281,7 +308,7 @@
     },
     {
       "name": "🔍 阿里盘搜",
-      "index": 7,
+      "index": 11,
       "val": "https://www.alipansou.com/search?k=%E5%BD%B1%E8%A7%86&s=0&t=-1&page=fypage",
       "key": "pansou",
       "desc": "阿里盘搜,支持阿里云盘搜索,可快速搜索阿里云盘资源中的有效连接,每天更新海量资源",
@@ -306,7 +333,7 @@
     },
     {
       "name": "🔍 优聚搜",
-      "index": 8,
+      "index": 12,
       "val": "https://api.ujuso.com/v1/api_search/vite?page=fypage&size=15&kid=LWsgYmiMxSVPpmwodIlkonoFPmYbcVJl&time=fysort&type=ALY&kw=%E5%BD%B1%E8%A7%86",
       "key": "ujuso",
       "desc": "优聚搜 ujuso.com",
@@ -324,7 +351,7 @@
     },
     {
       "name": "☁️ R酱-OneDriver",
-      "index": 9,
+      "index": 20,
       "key": "rjiang",
       "val": "https://share-api.rhilip.info/search?limit=50&offset=fypage",
       "desc": "此处资源均为软件全自动搬运至OneDrive国际版分享，没有条理且未经任何整理辨别！！！！请善用搜索功能进行检索~",
@@ -333,7 +360,7 @@
     },
     {
       "name": "夸克网盘小站",
-      "index": 10,
+      "index": 30,
       "val": "https://kkxz.vip",
       "key": "kkxz",
       "desc": "夸克网盘小站-夸克网盘资源共享第一站",
@@ -365,7 +392,7 @@
     },
     {
       "name": "KK分享社区",
-      "index": 11,
+      "index": 31,
       "val": "https://kkfx.cc",
       "key": "kkfx",
       "desc": "KK丨网盘学习资源分享社区",
