--- a/settings-ali.json
+++ b/settings-ali.json
@@ -1,9 +1,9 @@
 
 [
   {
-    "name": "🔑 阿里小站",
+    "name": "🔥 阿里小站",
     "index": 0,
-    "val": "https://www.pan666.cn",
+    "val": "https://ali.pan666.cn",
     "key": "xiaozhan",
     "desc": "阿里云盘资源共享站",
     "needKey": true,
@@ -11,7 +11,7 @@
     "password": "",
     "cookie": "",
     "loginError": false,
-    "searchUrl": "https://www.pan666.cn/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
+    "searchUrl": "https://ali.pan666.cn/api/discussions?include=user%2ClastPostedUser%2CmostRelevantPost%2CmostRelevantPost.user%2Ctags%2Ctags.parent%2CfirstPost&filter%5Bq%5D=**%20tag%3Avideo&filter%5Btag%5D=video&sort=fysort&page%5Boffset%5D=fypage",
     "cats": [
       { "name": "影视", "val": "video", "withType": 1},
       { "name": "动漫", "val": "comic", "withType": 1 },
@@ -282,33 +282,6 @@
             { "name": "2016-2011",  "val": "23", "withType": 1},
             { "name": "2010-2000",  "val": "24", "withType": 1},
             { "name": "更早",  "val": "25", "withType": 1}
-        ]
-    },
-    {
-        "name": "🔥 新小站",
-        "index": 7,
-        "val": "https://newxiaozhan.com/forum.php?mod=forumdisplay&fid=fyclassfysort&page=fypage",
-        "key": "newxiaozhan",
-        "desc": "阿里小站-阿里云盘资源共享站, 由于网站频繁遭受攻击，而之前的网站系统很难进行维护防御，目前升级新系统！",
-        "dataType": "html",
-        "needcookie": true,
-        "detailLinkPre": "https://newxiaozhan.com/",
-        "itemsExcloudByLink": "#|https",
-        "homeDataPath": ".hthreadlist&&li;.title&&Text;.title&&a&&href;.from&&Text;",
-        "searchUrl": "https://newxiaozhan.com/search.php?mod=forum&searchid=2996&orderby=lastpost&ascdesc=desc&searchsubmit=yes&kw=**&mobile=2&page=fypage",
-        "searchDataPath": ".hthreadlist&&li;.title&&Text;.title&&a&&href;.from&&Text;",
-        "detailPath": ".zepfirst&&.message&&Html",
-        "cats": [
-            { "name": "影视",  "val": "2", "withType": 1},
-            { "name": "动漫",  "val": "40", "withType": 1},
-            { "name": "音乐",  "val": "39", "withType": 1},
-            { "name": "图片",  "val": "36", "withType": 1},
-            { "name": "书籍",  "val": "41", "withType": 1}
-        ],
-        "sorts": [
-            { "name": "综合",  "val": "", "withType": 1},
-            { "name": "最新",  "val": "&orderby=lastpost&filter=lastpost", "withType": 1},
-            { "name": "热门",  "val": "&filter=heat&orderby=heats", "withType": 1}
         ]
     },
     {
