--- a/settings-ali.json
+++ b/settings-ali.json
@@ -302,6 +302,29 @@
       ]
     },
     {
+      "name": "🔍 易搜",
+      "index": 10,
+      "val": "https://yiso.fun/api/search?name=%E6%9C%80%E6%96%B0&pageNo=fypage&type=fyclass&from=ali",
+      "key": "yiso",
+      "desc": "努力做最好用的云盘资源搜索引擎！",
+      "dataType": "json",
+      "detailLinkPre": "",
+      "itemsExcloudByLink": "",
+      "homeDataPath": "data&&list;name;url;gmtCreate;",
+      "searchUrl": "https://yiso.fun/api/search?name=%E6%9C%80%E6%96%B0&pageNo=fypage&type=fyclass&from=ali",
+      "searchDataPath": "data&&list;name;url;gmtCreate;",
+      "cats": [
+        { "name": "综合", "val": "", "withType": 1},
+        { "name": "文件夹", "val": "folder", "withType": 1},
+        { "name": "文档", "val": "doc", "withType": 1},
+        { "name": "视频", "val": "video", "withType": 1},
+        { "name": "图片", "val": "image", "withType": 1},
+        { "name": "压缩包", "val": "package", "withType": 1},
+        { "name": "音频", "val": "music", "withType": 1},
+        { "name": "其他", "val": "other", "withType": 1}
+      ]
+    },
+    {
       "name": "🔍 阿里盘搜",
       "index": 11,
       "val": "https://www.alipansou.com/search?k=%E5%BD%B1%E8%A7%86&s=0&t=-1&page=fypage",
